syntax = "proto2";

package notestore;

message Color {
  optional float red = 1;
  optional float green = 2;
  optional float blue = 3;
  optional float alpha = 4;
}

message AttachmentInfo {
  optional string attachment_identifier = 1;
  optional string type_uti = 2;
}

message Font {
  optional string font_name = 1;
  optional float point_size = 2;
  optional int32 font_hints = 3;
}

message ParagraphStyle {
  optional int32 style_type = 1 [default = -1];
  optional int32 alignment = 2;
  optional int32 indent_amount = 4;
  optional Checklist checklist = 5;
  optional int32 block_quote = 8;
}

message Checklist {
  optional bytes uuid = 1;
  optional int32 done = 2;
}

message AttributeRun {
  optional int32 length = 1;
  optional ParagraphStyle paragraph_style = 2;
  optional Font font = 3;
  optional int32 font_weight = 5;
  optional int32 underlined = 6;
  optional int32 strikethrough = 7;
  optional int32 superscript = 8;
  optional string link = 9;
  optional Color color = 10;
  optional AttachmentInfo attachment_info = 12;
  optional int32 unknown_identifier = 13;
  optional int32 emphasis_style = 14;
}

message Note {
  optional string note_text = 2;
  repeated AttributeRun attribute_run = 5;
}

message Document {
  optional int32 version = 2;
  optional Note note = 3;
}

message NoteStoreProto {
  optional Document document = 2;
}

// Mergeable data structures (for tables, etc.)

message ObjectID {
  optional uint64 unsigned_integer_value = 2;
  optional string string_value = 4;
  optional int32 object_index = 6;
}

message RegisterLatest {
  optional ObjectID contents = 2;
}

message MapEntry {
  optional int32 key = 1;
  optional ObjectID value = 2;
}

message DictionaryElement {
  optional ObjectID key = 1;
  optional ObjectID value = 2;
}

message Dictionary {
  repeated DictionaryElement element = 1;
}

message MergeableDataObjectMap {
  optional int32 type = 1;
  repeated MapEntry map_entry = 3;
}

message OrderedSetOrderingArrayAttachment {
  optional int32 index = 1;
  optional bytes uuid = 2;
}

message OrderedSetOrderingArray {
  optional Note contents = 1;
  repeated OrderedSetOrderingArrayAttachment attachment = 2;
}

message OrderedSetOrdering {
  optional OrderedSetOrderingArray array = 1;
  optional Dictionary contents = 2;
}

message OrderedSet {
  optional OrderedSetOrdering ordering = 1;
  optional Dictionary elements = 2;
}

message ListEntryDetailsKey {
  optional int32 list_entry_details_type_index = 1;
  optional int32 list_entry_details_key = 2;
}

message ListEntryDetails {
  optional ListEntryDetailsKey list_entry_details_key = 1;
  optional ObjectID id = 2;
}

message ListEntry {
  optional ObjectID id = 2;
  optional ListEntryDetails details = 3;
  optional ListEntryDetails additional_details = 4;
}

message List {
  repeated ListEntry list_entry = 1;
}

message UnknownMergeableDataObjectEntryMessageEntry {
  optional int32 unknown_int1 = 1;
  optional int64 unknown_int2 = 2;
}

message UnknownMergeableDataObjectEntryMessage {
  optional UnknownMergeableDataObjectEntryMessageEntry unknown_entry = 1;
}

message MergeableDataObjectEntry {
  optional RegisterLatest register_latest = 1;
  optional List list = 5;
  optional Dictionary dictionary = 6;
  optional UnknownMergeableDataObjectEntryMessage unknown_message = 9;
  optional Note note = 10;
  optional MergeableDataObjectMap custom_map = 13;
  optional OrderedSet ordered_set = 16;
}

message MergeableDataObjectData {
  repeated MergeableDataObjectEntry mergeable_data_object_entry = 3;
  repeated string mergeable_data_object_key_item = 4;
  repeated string mergeable_data_object_type_item = 5;
  repeated bytes mergeable_data_object_uuid_item = 6;
}

message MergableDataObject {
  optional int32 version = 2;
  optional MergeableDataObjectData mergeable_data_object_data = 3;
}

message MergableDataProto {
  optional MergableDataObject mergable_data_object = 2;
}
